appId: com.vesko.calico.calico
---
# Test Sentry Integration
- launchApp
- assertVisible: "Sentry Test"
- tapOn: "Try!"
- assertVisible: "Sentry Test"

